# pythonfullstack

./: .dockerignore  .gitignore  Dockerfile  Procfile  module4_demo.py  pyproject.toml  requirements  requirements.txt
accounts/: urls.py  views.py
accounts/templates/accounts/: login.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  register.html
campushub/: asgi.py  settings.py  urls.py  wsgi.py
pymysql/: __init__.py
static/css/: style.css
static/js/: main.js
students/: admin.py  forms.py  models.py  urls.py  views.py
students/migrations/: 0001_initial.py  0002_alter_student_resume.py  0003_attendance.py
students/templates/students/: add_contact.html  dashboard.html  detail.html  form_contact.html  form_student.html  index.html  landing.html  location.html  student_confirm_delete.html
students/templatetags/: student_extras.py
templates/: _navbar.html  base.html  index.html
