[tool.poetry]
name = "campushub"
version = "1.0.0"
description = "Mother Theresa Institutions Engineering College - Campus Management"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
Django = ">=5.2,<5.3"
gunicorn = ">=23"
whitenoise = ">=6"
dj-database-url = ">=2"
psycopg2-binary = ">=2.9"
pillow = ">=10"
sqlparse = ">=0.4"
tzdata = ">=2024"
asgiref = ">=3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
